# modern_cpp_training

./: .gitmodules
1_week/calculator/: calculator.cpp  calculator.hpp  main.cpp
1_week/dynamic_linking/: app  app.cpp  calc.cpp  calc.hpp  how to make shared lib
2_week/: main.cpp  matrix.cpp  matrix.hpp
3_week/: CMakeLists.txt  doc.txt
3_week/include/: CSVparser.h  Iparser.h  JSONparser.h  XMLparser.h
3_week/src/: CSVparser.cpp  JsonParser.cpp  XMLparser.cpp  main.cpp
4_week/: CMakeLists.txt  requirement.txt
4_week/include/: calculator.h  helper_functions.h
4_week/src/: calculator.cpp  main.cpp
4_week/test/: CMakeLists.txt  TestCalculator.cpp
5_week/: CMakeLists.txt  requirements.txt
5_week/include/: Library.h  PlayList.h  Player.h  Song.h
5_week/src/: Library.cpp  PlayList.cpp  Player.cpp  main.cpp
5_week/test/: CMakeLists.txt  TestLibrary.cpp  TestMusicPlayLIst.cpp  TestPlayList.cpp  TestPlayer.cpp  TestSong.cpp  main.cpp
6_week/client/: CMakeLists.txt
6_week/client/include/: NetworkUtils.h  header.h
6_week/client/src/: NetworkUtils.cpp  main.cpp
6_week/client/test/: CMakeLists.txt  main.cpp
6_week/server/: CMakeLists.txt  requirement.txt
6_week/server/include/: Server.h  header.h  helper_functions.h
6_week/server/src/: NetworkUtils.cpp  main.cpp
6_week/server/test/: CMakeLists.txt  NetworkUtilsTest.cpp  ServerTest.cpp
7_week/elevator_simulation/: CMakeLists.txt  requirements.txt
7_week/elevator_simulation/test/: CMakeLists.txt
7_week/mini_instagram/: requirements.txt
